--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,13 @@ edition = "2021"
 [dependencies]
 # 异步运行时
 tokio = { version = "1.0", features = ["full"] }
-tokio_util = "0.7"
+tokio-util = "0.7"
 # 高性能序列化
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+# 服务框架
+axum = "0.8"
+http = "1.3.0"
 # 配置管理
 config = "0.15"
 dotenvy = "0.15"
@@ -31,3 +34,7 @@ thiserror = "1.0"
 [[bin]]
 name = "http_server"
 path = "src/bin/http_server.rs"
+
+[[example]]
+name = "response_usage"
+path = "examples/response_usage.rs"
