--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,12 @@ config = "0.15"
 dotenvy = "0.15"
 # 日志
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "json", "registry"] }
+tracing-subscriber = { version = "0.3", features = [
+    "env-filter",
+    "time",
+    "json",
+    "registry",
+] }
 once_cell = "1.21"
 # 时间处理
 chrono = { version = "0.4", features = ["serde"] }
@@ -34,7 +39,3 @@ thiserror = "1.0"
 [[bin]]
 name = "http_server"
 path = "src/bin/http_server.rs"
-
-[[example]]
-name = "response_usage"
-path = "examples/response_usage.rs"
