--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 # log
-RUST_LOG=DEBUG
+RUST_LOG= "DEBUG"
+
+# server
+SERVICE_NAME_HTTP = "tiny_id_http"
+
+
+# tracing
+OTLP_ENDPOINT = "http://localhost:4317"
+CONSOLE_OUTPUT = "true"
