--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,33 @@ http = "1.3.0"
 # 配置管理
 config = "0.15"
 dotenvy = "0.15"
-# 日志
+# 日志与链路追踪
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = [
     "env-filter",
     "time",
     "json",
     "registry",
+] }
+tracing-opentelemetry = "0.31"
+opentelemetry = { version = "0.30" }
+opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
+opentelemetry-otlp = { version = "0.30", features = [
+    "trace",
+    "logs",
+    "metrics",
+    "grpc-tonic",
+    "reqwest-client",
+] }
+opentelemetry-stdout = { version = "0.30", features = ["trace"] }
+opentelemetry-semantic-conventions = "0.30"
+tracing-opentelemetry-instrumentation-sdk = { version = "0.30" }
+axum-tracing-opentelemetry = { version = "0.30" }
+tower = "0.5"
+tower-http = { version = "0.6.6", features = [
+    "trace",
+    "timeout",
+    "request-id",
 ] }
 once_cell = "1.21"
 # 时间处理
@@ -34,7 +54,11 @@ rand = "0.8"
 # 错误处理
 anyhow = "1.0"
 thiserror = "1.0"
-
+# UUID生成（用于trace_id等）
+uuid = { version = "1.0", features = ["v4", "serde"] }
+# 异步等待工具
+futures = "0.3"
+reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
 
 [[bin]]
 name = "http_server"
