custom tracer and log

--- a/.env
+++ b/.env
@@ -8,3 +8,9 @@ SERVICE_NAME_HTTP = "tiny_id_http"
 # tracing
 OTLP_ENDPOINT = "http://localhost:4317"
 CONSOLE_OUTPUT = "true"
+
+
+# For GRPC:
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT="http://localhost:4317"
+OTEL_EXPORTER_OTLP_TRACES_PROTOCOL="grpc"
+OTEL_TRACES_SAMPLER="always_on"
