--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "tinyid"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "http_server"
+path = "src/bin/http_server.rs"
+
+[[bin]]
+name = "grpc_server"
+path = "src/bin/grpc_server.rs"
+
 [dependencies]
 # 异步运行时
 tokio = { version = "1.0", features = ["full"] }
@@ -31,10 +39,6 @@ opentelemetry-otlp = { version = "0.30", features = ["trace", "grpc-tonic"] }
 opentelemetry-stdout = { version = "0.30", features = ["trace"] }
 opentelemetry-semantic-conventions = "0.30"
 tracing-opentelemetry-instrumentation-sdk = { version = "0.30" }
-axum-tracing-opentelemetry = { version = "0.30" }
-init-tracing-opentelemetry = { version = "0.30.1", features = [
-    "tracing_subscriber_ext",
-] }
 tower = "0.5"
 tower-http = { version = "0.6.6", features = [
     "trace",
@@ -57,6 +61,11 @@ uuid = { version = "1.0", features = ["v4", "serde"] }
 futures = "0.3"
 reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
 
-[[bin]]
-name = "http_server"
-path = "src/bin/http_server.rs"
+# grpc
+tonic = "*"
+prost = "0.14"
+prost-build = "*"
+tonic-prost = "0.14.1"
+
+[build-dependencies]
+tonic-prost-build = "*"
